--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Piyush Saini - Frontend & Full-Stack Developer</title>
+    <title>Piyush Saini</title>
     <meta name="description" content="Portfolio of Piyush Saini - Computer Science student and developer passionate about AI, IoT, and modern web technologies. Tech Lead at Optimus Club." />
     <meta name="author" content="Piyush Saini" />
     <meta name="keywords" content="Piyush Saini, Web Developer, React, Node.js, AI, ML, Portfolio, Computer Science" />
@@ -13,14 +13,14 @@
     <meta property="og:description" content="Portfolio of Piyush Saini - Computer Science student and developer passionate about AI, IoT, and modern web technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://piyush-saini-portfolio.vercel.app" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@piyush_saini_dev" />
     <meta name="twitter:title" content="Piyush Saini - Frontend & Full-Stack Developer" />
     <meta name="twitter:description" content="Portfolio of Piyush Saini - Computer Science student and developer passionate about AI, IoT, and modern web technologies." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://piyush-saini-portfolio.vercel.app" />
@@ -28,6 +28,8 @@
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/png" href="/graduation-hat.png" />
+
   </head>
 
   <body>
